--- a/index.html
+++ b/index.html
@@ -2,65 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Stephen Raj T – AI Developer. Creator of Smart Traffic Signal using YOLOv8. Connect with me to explore AI projects and innovations." />
-  <meta name="keywords" content="Stephen Raj T, AI Developer, YOLOv8, Python, OpenCV, Ambulance Detection, Smart Traffic Management, GitHub, LinkedIn" />
-  <meta name="author" content="Stephen Raj T" />
-  <title>Stephen Raj T | AI & Python Developer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Stephen Raj T - Portfolio | AI & Traffic Signal Optimization">
+  <meta name="keywords" content="Stephen Raj T, AI Developer, Traffic Signal Project, Ambulance Detection, GitHub Portfolio">
+  <meta name="author" content="Stephen Raj T">
+  <title>Stephen Raj T | AI Innovator & Student</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      color: #333;
       margin: 0;
       padding: 0;
-      background: #f4faff;
-      color: #333;
     }
     header {
-      background: #007acc;
+      background-color: #0288d1;
       color: white;
-      padding: 30px 20px;
+      padding: 20px;
       text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      font-size: 1.2em;
-      margin-top: 5px;
     }
     section {
-      padding: 40px 20px;
-      max-width: 1000px;
+      padding: 30px;
+      max-width: 800px;
       margin: auto;
     }
-    .section-title {
-      font-size: 1.8em;
-      color: #007acc;
-      margin-bottom: 15px;
-      border-bottom: 2px solid #007acc;
-      display: inline-block;
-    }
-    .project-card {
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    h1, h2 {
+      color: #01579b;
     }
     a {
-      color: #007acc;
+      color: #0288d1;
       text-decoration: none;
     }
-    a:hover {
-      text-decoration: underline;
-    }
     footer {
-      background: #007acc;
-      color: white;
+      background-color: #eeeeee;
       text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
+      padding: 10px;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -68,43 +45,27 @@
 
   <header>
     <h1>Stephen Raj T</h1>
-    <p>AI & Python Developer | Smart Traffic Innovator</p>
+    <p>AI Developer | Traffic Signal Optimization Innovator | Final-Year Student</p>
   </header>
 
   <section>
-    <h2 class="section-title">About Me</h2>
-    <p>
-      I’m <strong>Stephen Raj T</strong>, a passionate AI enthusiast and developer. 
-      I specialize in Python, OpenCV, and real-time computer vision applications. 
-      My mission is to solve real-world problems using Artificial Intelligence.
-    </p>
-  </section>
+    <h2>About Me</h2>
+    <p>Hello! I'm Stephen, an aspiring AI engineer passionate about using technology to solve real-world problems. My latest innovation is an AI-based traffic signal system that detects ambulances and gives them green priority.</p>
 
-  <section>
-    <h2 class="section-title">Project Spotlight</h2>
-    <div class="project-card">
-      <h3>🚦 Smart Traffic Signal with Ambulance Detection</h3>
-      <p>
-        This project uses <strong>YOLOv8</strong> and <strong>OpenCV</strong> to detect ambulances in real time, 
-        automatically turning traffic lights green for emergency vehicles. 
-        Includes siren sound, GUI interface, and real-time voice alerts.
-      </p>
-      <p><strong>Tech Stack:</strong> Python, YOLOv8, OpenCV, Tkinter, Pygame</p>
-      <p><a href="https://github.com/T-Stephen/intelli-traffic-ai" target="_blank">🔗 View on GitHub</a></p>
-    </div>
-  </section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>🚦 Smart Traffic Signal with Ambulance Detection</strong> – Using YOLOv8 & OpenCV to automate traffic signals.</li>
+      <li><strong>🧠 AI Chatbot</strong> – Basic chatbot using NLP and Python.</li>
+    </ul>
 
-  <section>
-    <h2 class="section-title">Connect with Me</h2>
-    <p>
-      🔗 <a href="https://github.com/T-Stephen" target="_blank">GitHub: @T-Stephen</a><br>
-      🔗 <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">LinkedIn: Stephen Raj T</a><br>
-      📧 Email: <a href="mailto:stephenbugi525@gmail.com">stephenbugi525@gmail.com</a>
-    </p>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:stephenbugi525@gmail.com">stephenbugi525@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">linkedin.com/in/stephen-raj-t</a></p>
+    <p>GitHub: <a href="https://github.com/T-Stephen" target="_blank">github.com/T-Stephen</a></p>
   </section>
 
   <footer>
-    © 2025 Stephen Raj T. All rights reserved.
+    <p>&copy; 2025 Stephen Raj T. All rights reserved.</p>
   </footer>
 
 </body>
