--- a/index.html
+++ b/index.html
@@ -2,71 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Stephen Raj T - Portfolio | AI & Traffic Signal Optimization">
-  <meta name="keywords" content="Stephen Raj T, AI Developer, Traffic Signal Project, Ambulance Detection, GitHub Portfolio">
-  <meta name="author" content="Stephen Raj T">
-  <title>Stephen Raj T | AI Innovator & Student</title>
+  <meta name="google-site-verification" content="qo--v1Jv9NrZoN4QVfF12yJ35lewuIjF6WzxF8F_N4c" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Stephen Raj T" />
+  <meta name="description" content="Stephen Raj T - AI Enthusiast | Traffic Signal Optimization Project | Tech Portfolio" />
+  <meta name="keywords" content="Stephen Raj T, AI Projects, Traffic Management, Ambulance Detection, Portfolio, Github, College Projects" />
+  <title>Stephen Raj T | Portfolio</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
-      color: #333;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f0f8ff;
+      color: #333;
     }
     header {
-      background-color: #0288d1;
+      background-color: #007acc;
       color: white;
-      padding: 20px;
+      padding: 20px 0;
       text-align: center;
     }
-    section {
+    .container {
       padding: 30px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
     }
     h1, h2 {
-      color: #01579b;
+      color: #007acc;
     }
-    a {
-      color: #0288d1;
+    .section {
+      margin-bottom: 40px;
+    }
+    .button {
+      background-color: #007acc;
+      color: white;
+      padding: 10px 20px;
       text-decoration: none;
+      border-radius: 8px;
     }
     footer {
-      background-color: #eeeeee;
-      text-align: center;
+      background-color: #ddd;
       padding: 10px;
-      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #666;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Stephen Raj T</h1>
-    <p>AI Developer | Traffic Signal Optimization Innovator | Final-Year Student</p>
-  </header>
+<header>
+  <h1>Stephen Raj T</h1>
+  <p>AI Developer | Traffic Signal Optimization | Student Innovator</p>
+</header>
 
-  <section>
+<div class="container">
+  <div class="section">
     <h2>About Me</h2>
-    <p>Hello! I'm Stephen, an aspiring AI engineer passionate about using technology to solve real-world problems. My latest innovation is an AI-based traffic signal system that detects ambulances and gives them green priority.</p>
+    <p>
+      I'm Stephen Raj T, a passionate student exploring AI and smart systems. I recently built a cutting-edge <strong>Ambulance Detection Traffic Signal Optimization System</strong> using YOLOv8, Python, OpenCV, and Tkinter.
+      My aim is to develop real-time, efficient AI solutions that can help society and improve emergency response.
+    </p>
+  </div>
 
-    <h2>Projects</h2>
+  <div class="section">
+    <h2>My Projects</h2>
     <ul>
-      <li><strong>🚦 Smart Traffic Signal with Ambulance Detection</strong> – Using YOLOv8 & OpenCV to automate traffic signals.</li>
-      <li><strong>🧠 AI Chatbot</strong> – Basic chatbot using NLP and Python.</li>
+      <li><strong>AI Smart Traffic Management</strong> – Detects ambulances using YOLOv8 and controls traffic signals in real-time</li>
+      <li><strong>Data Science Mini Projects</strong> – Visualizations, analytics, and ML models using Python</li>
+      <li><strong>Chatbot with Python</strong> – An interactive AI chatbot for college Q&A</li>
     </ul>
+    <a href="https://github.com/T-Stephen" class="button" target="_blank">Visit My GitHub</a>
+  </div>
 
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:stephenbugi525@gmail.com">stephenbugi525@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">linkedin.com/in/stephen-raj-t</a></p>
-    <p>GitHub: <a href="https://github.com/T-Stephen" target="_blank">github.com/T-Stephen</a></p>
-  </section>
+  <div class="section">
+    <h2>Connect with Me</h2>
+    <p>Email: stephenbugi525@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">Stephen Raj T</a></p>
+  </div>
+</div>
 
-  <footer>
-    <p>&copy; 2025 Stephen Raj T. All rights reserved.</p>
-  </footer>
+<footer>
+  &copy; 2025 Stephen Raj T. All rights reserved.
+</footer>
 
 </body>
 </html>
