--- a/index.html
+++ b/index.html
@@ -2,88 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-site-verification" content="qo--v1Jv9NrZoN4QVfF12yJ35lewuIjF6WzxF8F_N4c" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Stephen Raj T - AI Traffic Signal Innovator</title>
+  <meta name="description" content="Official portfolio of Stephen Raj T – Final year student and creator of the AI Smart Traffic Signal Project. Visit to know more about his innovation and career.">
   <meta name="author" content="Stephen Raj T" />
-  <meta name="description" content="Stephen Raj T - AI Enthusiast | Traffic Signal Optimization Project | Tech Portfolio" />
-  <meta name="keywords" content="Stephen Raj T, AI Projects, Traffic Management, Ambulance Detection, Portfolio, Github, College Projects" />
-  <title>Stephen Raj T | Portfolio</title>
+  <meta name="google-site-verification" content="qo--v1Jv9NrZoN4QVfF12yJ35lewuIjF6WzxF8F_N4c" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" />
   <style>
     body {
+      font-family: 'Poppins', sans-serif;
+      background: #f5f8ff;
+      color: #222;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f0f8ff;
-      color: #333;
+      padding: 0;
+      text-align: center;
     }
     header {
-      background-color: #007acc;
+      background: #007bff;
       color: white;
-      padding: 20px 0;
-      text-align: center;
+      padding: 2rem 1rem;
+      border-bottom: 4px solid #0056b3;
     }
-    .container {
-      padding: 30px;
-      max-width: 900px;
-      margin: auto;
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
-    h1, h2 {
-      color: #007acc;
+    p {
+      font-size: 1.1rem;
     }
-    .section {
-      margin-bottom: 40px;
+    .content {
+      padding: 2rem;
     }
     .button {
-      background-color: #007acc;
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #007bff;
       color: white;
-      padding: 10px 20px;
-      text-decoration: none;
+      border: none;
       border-radius: 8px;
+      text-decoration: none;
+      font-size: 1rem;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #0056b3;
     }
     footer {
-      background-color: #ddd;
-      padding: 10px;
-      text-align: center;
-      font-size: 14px;
-      color: #666;
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #555;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Stephen Raj T</h1>
+    <p>Final Year Student | AI Smart Traffic Signal Developer | Tech Innovator</p>
+  </header>
 
-<header>
-  <h1>Stephen Raj T</h1>
-  <p>AI Developer | Traffic Signal Optimization | Student Innovator</p>
-</header>
-
-<div class="container">
-  <div class="section">
-    <h2>About Me</h2>
-    <p>
-      I'm Stephen Raj T, a passionate student exploring AI and smart systems. I recently built a cutting-edge <strong>Ambulance Detection Traffic Signal Optimization System</strong> using YOLOv8, Python, OpenCV, and Tkinter.
-      My aim is to develop real-time, efficient AI solutions that can help society and improve emergency response.
-    </p>
+  <div class="content">
+    <h2>🚦 AI Smart Traffic Signal Project</h2>
+    <p>This project uses YOLOv8 for ambulance detection and real-time signal switching with sound alerts and GUI support.</p>
+    <a class="button" href="https://github.com/T-Stephen" target="_blank">🔗 View GitHub</a>
+    <a class="button" href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">🔗 LinkedIn</a>
+    <a class="button" href="mailto:stephenbugi525@gmail.com">📧 Contact Me</a>
   </div>
 
-  <div class="section">
-    <h2>My Projects</h2>
-    <ul>
-      <li><strong>AI Smart Traffic Management</strong> – Detects ambulances using YOLOv8 and controls traffic signals in real-time</li>
-      <li><strong>Data Science Mini Projects</strong> – Visualizations, analytics, and ML models using Python</li>
-      <li><strong>Chatbot with Python</strong> – An interactive AI chatbot for college Q&A</li>
-    </ul>
-    <a href="https://github.com/T-Stephen" class="button" target="_blank">Visit My GitHub</a>
-  </div>
-
-  <div class="section">
-    <h2>Connect with Me</h2>
-    <p>Email: stephenbugi525@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">Stephen Raj T</a></p>
-  </div>
-</div>
-
-<footer>
-  &copy; 2025 Stephen Raj T. All rights reserved.
-</footer>
-
+  <footer>
+    &copy; 2025 Stephen Raj T. All Rights Reserved.
+  </footer>
 </body>
 </html>
