--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stephen Raj T - AI Traffic Signal Innovator</title>
-  <meta name="description" content="Official portfolio of Stephen Raj T – Final year student and creator of the AI Smart Traffic Signal Project. Visit to know more about his innovation and career.">
+  <meta name="description" content="Official portfolio of Stephen Raj T – Third year student and creator of the AI Smart Traffic Signal Project. Visit to know more about his innovation and career.">
   <meta name="author" content="Stephen Raj T" />
   <meta name="google-site-verification" content="qo--v1Jv9NrZoN4QVfF12yJ35lewuIjF6WzxF8F_N4c" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" />
