--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
   <header>
     <h1>Stephen Raj T</h1>
-    <p>Final Year Student | AI Smart Traffic Signal Developer | Tech Innovator</p>
+    <p>Third Year Student | AI Smart Traffic Signal Developer | Tech Innovator</p>
   </header>
 
   <div class="content">
