--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Stephen Raj - Portfolio" />
   <meta name="google-site-verification" content="qo--v1Jv9NrZoN4QVfF12yJ35lewuIjF6WzxF8F_N4c" />
-  <title>Stephen Raj | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Stephen Raj T - Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -14,120 +14,138 @@
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
     }
+
     body {
-      background: #f4f8fb;
+      background: linear-gradient(to right, #eef2f3, #8e9eab);
       color: #333;
       line-height: 1.6;
+      animation: fadeIn 1.2s ease-in;
     }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     header {
-      background: #004080;
-      color: #fff;
-      padding: 60px 20px;
+      background-color: #1e3c72;
+      color: white;
+      padding: 20px;
       text-align: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
+
     header h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
     }
+
     header p {
       font-size: 1.2rem;
       margin-top: 10px;
     }
-    nav {
-      background: #002b5c;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    section {
-      padding: 60px 20px;
+
+    .container {
+      padding: 30px;
       max-width: 1000px;
       margin: auto;
     }
-    section h2 {
-      color: #004080;
-      margin-bottom: 20px;
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    h2 {
       font-size: 2rem;
-    }
-    .project-box {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 20px;
-      margin-bottom: 20px;
-    }
-    .contact-form input,
-    .contact-form textarea {
-      width: 100%;
-      padding: 12px;
+      color: #1e3c72;
       margin-bottom: 15px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      position: relative;
     }
-    .contact-form button {
-      background: #004080;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 1rem;
+
+    h2::after {
+      content: '';
+      display: block;
+      height: 4px;
+      width: 60px;
+      background-color: #f39c12;
+      position: absolute;
+      bottom: -8px;
+      left: 0;
     }
-    footer {
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #f39c12;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      margin: 20px auto;
+      display: block;
+    }
+
+    .social {
       text-align: center;
-      padding: 30px;
-      background: #004080;
-      color: white;
+      margin-top: 20px;
+    }
+
+    .social a {
+      margin: 0 10px;
+      text-decoration: none;
+      font-size: 1.5rem;
+      color: #1e3c72;
+      transition: 0.3s;
+    }
+
+    .social a:hover {
+      color: #f39c12;
     }
   </style>
 </head>
+
 <body>
+  <header>
+    <h1>Stephen Raj T</h1>
+    <p>Third Year College Student | Aspiring AI Developer</p>
+  </header>
 
-<header>
-  <h1>Stephen Raj</h1>
-  <p>Third Year Student | AI & ML Enthusiast | Developer</p>
-</header>
+  <div class="container">
+    <img src="https://avatars.githubusercontent.com/u/134159099?v=4" alt="Stephen Raj T" class="profile-img" />
 
-<nav>
-  <a href="#about">About</a>
-  <a href="#projects">Projects</a>
-  <a href="#contact">Contact</a>
-</nav>
+    <section>
+      <h2>About Me</h2>
+      <p>
+        Hello! I'm Stephen, a passionate student currently pursuing my third year in engineering. I specialize in AI and Data Science, and I love creating intelligent systems that solve real-world problems.
+      </p>
+    </section>
 
-<section id="about">
-  <h2>About Me</h2>
-  <p>Hello! I'm Stephen Raj, a passionate third-year engineering student deeply interested in Artificial Intelligence and Machine Learning. I strive to create innovative solutions that can make a real-world impact. Whether it's designing intelligent traffic systems or presenting on global energy cycles, I aim to combine technology with creativity to solve problems and inspire others.</p>
-</section>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li>🚦 Advanced Traffic Signal with Ambulance Detection using YOLOv8</li>
+        <li>📊 Data Science Lab Projects (ML, Visualization, Analysis)</li>
+        <li>🌐 Portfolio Website hosted on GitHub Pages</li>
+      </ul>
+    </section>
 
-<section id="projects">
-  <h2>Projects</h2>
-  <div class="project-box">
-    <h3>🚦 Ambulance Detection Traffic Signal System</h3>
-    <p>A smart traffic management system that uses YOLOv8 and OpenCV to detect ambulances and automatically switch traffic signals to green. Developed with Python and integrated with Tkinter GUI and real-time clock display.</p>
+    <section>
+      <h2>Contact</h2>
+      <p>Email: stephenbugi525@gmail.com</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">stephen-raj-t</a></p>
+      <p>GitHub: <a href="https://github.com/T-Stephen" target="_blank">T-Stephen</a></p>
+    </section>
+
+    <div class="social">
+      <a href="https://www.linkedin.com/in/stephen-raj-t-3b417528a/" target="_blank">🔗</a>
+      <a href="https://github.com/T-Stephen" target="_blank">🐙</a>
+      <a href="mailto:stephenbugi525@gmail.com">📧</a>
+    </div>
   </div>
-  <div class="project-box">
-    <h3>💡 Energy Cycle Presentation</h3>
-    <p>An innovative seminar exploring global energy cycles using interactive charts, real-time data, and AI visuals. Designed to educate and inspire awareness of sustainability and energy management.</p>
-  </div>
-</section>
-
-<section id="contact">
-  <h2>Contact Me</h2>
-  <form class="contact-form" name="contact" method="POST" data-netlify="true">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-</section>
-
-<footer>
-  <p>© 2025 Stephen Raj. All Rights Reserved.</p>
-</footer>
-
 </body>
+
 </html>
